--- a/package.json
+++ b/package.json
@@ -1,22 +1,9 @@
 {
-  "name": "ssm-ritradrunk",
-  "version": "1.0.7",
-  "type": "module",
+  "name": "ssm-orchestrator",
+  "version": "1.0.0",
+  "description": "Orchestrator for Social Stream Manager",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
-    "express": "^4.19.2",
-    "dotenv": "^16.4.5",
-    "googleapis": "^140.0.0",
-    "@google-cloud/storage": "^7.11.0",
-    "@google/genai": "*",
-    "@google/generative-ai": "^0.13.0",
-    "@google-cloud/tasks": "^5.0.0",
-    "openai": "^4.28.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "@google-cloud/functions-framework": "^3.0.0"
   }
 }
