--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "1.0.0",
   "description": "Orchestrator for Social Stream Manager",
   "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.0.0"
+    "@google-cloud/functions-framework": "^3.0.0",
+    "express": "^4.18.2",
+    "openai": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
