--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ssm-orchestrator",
+  "name": "ssm-mesa-static",
   "version": "1.0.0",
-  "description": "Orchestrator for Social Stream Manager",
+  "description": "Social Stream Manager Orchestrator",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "dependencies": {
-    "@google-cloud/functions-framework": "^3.0.0",
-    "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "@google-cloud/storage": "^7.7.0",
+    "dotenv": "^16.3.1",
+    "openai": "^4.24.0"
   },
   "engines": {
     "node": ">=18.0.0"
