--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ssm-mesa-static",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Social Stream Manager Orchestrator",
   "main": "index.js",
   "type": "module",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
+    "@google/genai": "^0.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.24.0"
