--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.7.0",
-    "@google/genai": "^0.1.0",
+    "@google/genai": "*",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "openai": "^4.24.0"
